# tgcontest

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .travisyml  CMakeLists.txt  LICENSE  NOTICE  README.md  build_viewer.sh  build_zip.sh  canonize.sh  deb-packages.txt  download.sh  download_data.sh  download_models.sh  test_canonical.sh  tgnews.sh
cmake/: FindMLPACK.cmake
configs/: annotator.pbtxt  clusterer.pbtxt  ranker.pbtxt  server.pbtxt  summarizer.pbtxt
en/: economy.html  entertainment.html  metrics.html  other.html  science.html  sports.html  technology.html
json2html/: calc_clustering_metrics.py  calc_metrics.py  convert.py  template.html
json2html/templates/: article.html  base.html  cluster.html  index.html  metrics.html
markup/: categories.txt  en_cat_all_train.txt  en_cat_exam.tsv  en_cat_honey.tsv  en_cat_markup.txt  en_cat_raw_markup.tsv  en_cat_test_markup.txt  en_cat_test_raw_markup.tsv  en_cat_training.tsv  en_news_detect.txt  ru_cat_all_train.txt  ru_cat_exam.tsv  ru_cat_honey.tsv  ru_cat_lenta_train.txt  ru_cat_markup.txt  ru_cat_raw_markup.tsv  ru_cat_test_markup.txt  ru_cat_test_raw_markup.tsv  ru_cat_training.tsv  ru_news_detect.txt
markup/categories/: en_cat_exam.tsv  en_cat_honey.tsv  en_cat_training.tsv  project.css  project.html  project.js  ru_cat_exam.tsv  ru_cat_honey.tsv  ru_cat_training.tsv
models/: cat_detect.ftz  en_cat_detect.ftz  en_news_detect.ftz  en_sentence_embedder.pt  en_sentence_embedder_v2.pt  en_sentence_embedder_v3.pt  en_tg_bbc_nc_vector_model.vec  lang_detect.ftz  news_detect.ftz  pagerank_rating.txt  ru_cat_detect.ftz  ru_news_detect.ftz  ru_sentence_embedder.pt  ru_sentence_embedder_v2.pt  ru_sentence_embedder_v3.pt  ru_sentence_embedder_v4_text.pt  ru_sentence_embedder_v4_title.pt  ru_tg_lenta_vector_model.vec
models/en_sentence_embedder/: bias.txt  matrix.txt
models/ru_sentence_embedder/: bias.txt  matrix.txt
models/sentence_embedder/: bias.txt  matrix.txt
ratings/: en_rating.txt  rating_merged.txt  ru_rating.txt
ru/: economy.html  entertainment.html  metrics.html  other.html  science.html  sports.html  technology.html
scripts/: CatTrainEn.ipynb  CatTrainRu.ipynb  PageRank.ipynb  PageRankMerged.ipynb  PageRankRating.ipynb  Similarity.ipynb  SimilarityEn.ipynb  SimilarityRu.ipynb  VectorsEn.ipynb  VectorsRu.ipynb  aggregate_clustering_toloka.py  aggregate_toloka.py  bbc_to_ft.py  bbc_to_text.py  build_idf.py  call_put.py  check_server.py  clusterization_baseline.ipynb  form_clustering_markup.py  json2toloka.py  json_to_text.py  json_to_toloka.py  lenta_to_ft.py  make_ammo.py  news_category_to_ft.py  news_category_to_text.py  old_news_detect_convert.py  prepare_texts.py  train_fasttext.ipynb  util.py
src/: .main.cpp.swp  agency_rating.cpp  agency_rating.h  annotate.cpp  annotate.h  annotator.cpp  annotator.h  cluster.cpp  cluster.h  clusterer.cpp  clusterer.h  config.proto  context.h  controller.cpp  controller.h  db_document.cpp  db_document.h  detect.cpp  detect.h  document.cpp  document.h  embedder.cpp  embedder.h  hclustering.cpp  hclustering.h  hot_state.h  lang_detect.cpp  lang_detect.h  main.cpp  nasty.cpp  nasty.h  news_detect.cpp  news_detect.h  parser.cpp  parser.h  rank.cpp  rank.h  ranker.cpp  ranker.h  run_server.cpp  (+15 more)
src/clustering/: clustering.cpp  clustering.h  dbscan.cpp  dbscan.h  embedder.cpp  embedder.h  hclustering.cpp  hclustering.h  in_cluster_ranging.cpp  in_cluster_ranging.h  rank_docs.cpp  rank_docs.h  slink.cpp  slink.h
src/document_ranking/: weighted_document.cpp  weighted_document.h
src/embedders/: embedder.h  ft_embedder.cpp  ft_embedder.h  tfidf_embedder.cpp  tfidf_embedder.h  token_indexer.cpp  token_indexer.h  torch_embedder.cpp  torch_embedder.h
src/proto/: config.proto  document.proto  enum.proto
src/rank/: rank.cpp  rank.h
test/: example1.html  parser.cpp
test/data/: canonical_annotation.json  canonical_input.json  canonical_top.json  example1.html  example1.json
toloka/categories/: en_description.html  input.json  output.json  project.html  ru_cat_exam.tsv  ru_cat_training.tsv  ru_description.html
toloka/clustering_pairs/: en_project.html  en_train_pool.tsv  ru_description.html  ru_exam_pool.tsv  ru_honey_pool.tsv  ru_train_pool.tsv
toloka/toloka_pairs/: en_description.html  project.css  project.js
viewer/: calc_categories_metrics.py  calc_clustering_metrics.py  calc_threads_metrics.py  metrics_to_html.py  requirements.txt
viewer/templates/: index.html  metrics.html  rubric.html
viewer/templates/css/: contest-zoo.css
